plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.7'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.swadeshitech'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
    mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation 'org.modelmapper:modelmapper:3.1.1'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.lettuce:lettuce-core'
	implementation 'org.springframework.security:spring-security-core:6.4.2'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'org.springframework.kafka:spring-kafka'

    compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
    imports {
		mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.7" // Replace with your Spring Boot version
    }
}

tasks.named('test') {
	useJUnitPlatform()
}

task buildJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'com.swadeshitech.prodhub.ProdhubApplication'
    }
    archiveFileName = 'prodhub.jar'
    from configurations.runtimeClasspath
    with jar
}